k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-chenaiexpo-dev
  labels:
    app: chenaiexpo
    tenant: opsera
    environment: dev
    managed-by: argocd
