k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chenaiexpo
  namespace: opsera-chenaiexpo-dev
  labels:
    app: chenaiexpo
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - chenaiexpo-dev.agent.opsera.dev
    secretName: chenaiexpo-dev-tls
  rules:
  - host: chenaiexpo-dev.agent.opsera.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chenaiexpo
            port:
              number: 80
